--- a/src/static/css/ventas.css
+++ b/src/static/css/ventas.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&display=swap');
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Raleway', sans-serif!important;
+    font-weight: 300;
 }
 
 body{
@@ -93,6 +97,17 @@ body{
 
 .radiobutton{
     display: none;
+}
+
+.dateSelector{
+    width: 100vw;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+
+.dateSelector p, input{
+    font-weight: 1000;
 }
 
 @media(max-width:1100px){
