anular venta y remover de ticket implementados

--- a/src/static/css/ventas.css
+++ b/src/static/css/ventas.css
@@ -100,7 +100,7 @@ body{
 }
 
 .dateSelector{
-    width: 100vw;
+    width: 100%;
     display: grid;
     justify-content: center;
     align-items: center;
